# Pac-Man

./: .gitignore  CMakeLists.txt  Documentație Hackathon PA - bun.docx  Makefile  game  graph.c  graph.h  main.c  map.c  map.h  player.c  player.h  question.c  question.h  question_raylib.c  question_raylib.h  utils.c  utils.h
